@@ -3,6 +3,10 @@
 # $Header: $
 
   25 Feb 2013; Francisco Blas Izquierdo Riera (klondike)
+  adchpp-lan-9999.ebuild:
+  Fix ia64
+
+  25 Feb 2013; Francisco Blas Izquierdo Riera (klondike)
   adchpp-lan-9999.ebuild, metadata.xml:
   Add support for using system lua
 
